--- a/src/pug/layout/_default-layout.pug
+++ b/src/pug/layout/_default-layout.pug
@@ -22,7 +22,7 @@ html(lang="ja")
     meta(name="format-detection" content="telephone=no")
 
     // smartphone meta
-    meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no, user-scalable=0")
     if meta.webclipicon_url
       link(rel="apple-touch-icon", href=meta.webclipicon_url)
 
@@ -62,8 +62,8 @@ html(lang="ja")
     // stylesheet
     block stylesheet-block
 
-    // javascript
-    block javascript-block
-
   body
     block content-block
+    
+    // javascript
+    block javascript-block
