--- a/src/scss/page/deepar/style.scss
+++ b/src/scss/page/deepar/style.scss
@@ -69,26 +69,22 @@ body {
   background-color: rgba(255, 255, 255, 0.7);
 }
 
-.thumb {
-  position: relative;
-  height: 100px;
-  margin-top: 15px;
-  margin-right: auto;
-  margin-bottom: 15px;
-  margin-left: auto;
-  opacity: 0.8;
-  transition: all 300ms ease;
+.swiper {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  padding: 10px 0 40px;
+  background-color: rgba(1, 1, 1, 0.4);
 }
 
-.slick-center .thumb {
-  color: #e67e22;
-  opacity: 1;
-  -moz-transform: scale(1.3);
-  -ms-transform: scale(1.3);
-  -o-transform: scale(1.3);
-  -webkit-transform: scale(1.3);
-  transform: scale(1.3);
+.swiper-slide-thumb {
+  width: 20vw;
+  height: 20vw;
 }
-.slick-slide {
-  width: 130px;
+
+.swiper-pagination {
+  position: absolute;
+  bottom: 10px;
+  width: 100%;
+  margin: 0 auto;
 }
