feat : setactive swiper

--- a/src/pug/page/deepar/index.pug
+++ b/src/pug/page/deepar/index.pug
@@ -16,23 +16,23 @@ block content-block
     span.loader
 
   // Carousel
-  //- .swiper
-  //-   .swiper-container
-  //-     .swiper-wrapper
-  //-       .swiper-slide
-  //-         img.swiper-slide-thumb(src='/img/deepar/galaxy.png')
-  //-       .swiper-slide
-  //-         img.swiper-slide-thumb(src='/img/deepar/aviators.png')
-  //-       .swiper-slide
-  //-         img.swiper-slide-thumb(src='/img/deepar/beard.png')
-  //-       .swiper-slide
-  //-         img.swiper-slide-thumb(src='/img/deepar/dalmatian.png')
-  //-       .swiper-slide
-  //-         img.swiper-slide-thumb(src='/img/deepar/flowers.png')
-  //-       .swiper-slide
-  //-         img.swiper-slide-thumb(src='/img/deepar/koala.png')
-  //-       .swiper-slide
-  //-         img.swiper-slide-thumb(src='/img/deepar/lion.png')
-  //-       .swiper-slide
-  //-         img.swiper-slide-thumb(src='/img/deepar/teddy_cigar.png')
-  //-   .swiper-pagination
+  .swiper
+    .swiper-container
+      .swiper-wrapper
+        .swiper-slide
+          img.swiper-slide-thumb(src='/img/deepar/galaxy.png')
+        .swiper-slide
+          img.swiper-slide-thumb(src='/img/deepar/aviators.png')
+        .swiper-slide
+          img.swiper-slide-thumb(src='/img/deepar/beard.png')
+        .swiper-slide
+          img.swiper-slide-thumb(src='/img/deepar/dalmatian.png')
+        .swiper-slide
+          img.swiper-slide-thumb(src='/img/deepar/flowers.png')
+        .swiper-slide
+          img.swiper-slide-thumb(src='/img/deepar/koala.png')
+        .swiper-slide
+          img.swiper-slide-thumb(src='/img/deepar/lion.png')
+        .swiper-slide
+          img.swiper-slide-thumb(src='/img/deepar/teddy_cigar.png')
+    .swiper-pagination
