--- a/src/pug/page/deepar/index.pug
+++ b/src/pug/page/deepar/index.pug
@@ -5,8 +5,10 @@ prepend config-block
 
 prepend stylesheet-block
   link(rel="stylesheet" href='/deepar/style.css')
+  link(rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css")
 
 prepend javascript-block
+  script(src="https://unpkg.com/swiper/swiper-bundle.js")
   script(type='text/javascript' src='/lib/deepar/deepar.js')
   script(type='text/javascript' src='/deepar/script.js')
 
@@ -16,23 +18,24 @@ block content-block
     span.loader
 
   // Carousel
-  .swiper
-    .swiper-container
-      .swiper-wrapper
-        .swiper-slide
-          img.swiper-slide-thumb(src='/img/deepar/galaxy.png')
-        .swiper-slide
-          img.swiper-slide-thumb(src='/img/deepar/aviators.png')
-        .swiper-slide
-          img.swiper-slide-thumb(src='/img/deepar/beard.png')
-        .swiper-slide
-          img.swiper-slide-thumb(src='/img/deepar/dalmatian.png')
-        .swiper-slide
-          img.swiper-slide-thumb(src='/img/deepar/flowers.png')
-        .swiper-slide
-          img.swiper-slide-thumb(src='/img/deepar/koala.png')
-        .swiper-slide
-          img.swiper-slide-thumb(src='/img/deepar/lion.png')
-        .swiper-slide
-          img.swiper-slide-thumb(src='/img/deepar/teddy_cigar.png')
-    .swiper-pagination
+  .swiper-wrapper
+    .swiper
+      .swiper-container
+        .swiper-wrapper
+          .swiper-slide
+            img.swiper-slide-thumb(src='/img/deepar/samples/galaxy.png')
+          .swiper-slide
+            img.swiper-slide-thumb(src='/img/deepar/samples/aviators.png')
+          .swiper-slide
+            img.swiper-slide-thumb(src='/img/deepar/samples/beard.png')
+          .swiper-slide
+            img.swiper-slide-thumb(src='/img/deepar/samples/dalmatian.png')
+          .swiper-slide
+            img.swiper-slide-thumb(src='/img/deepar/samples/flowers.png')
+          .swiper-slide
+            img.swiper-slide-thumb(src='/img/deepar/samples/koala.png')
+          .swiper-slide
+            img.swiper-slide-thumb(src='/img/deepar/samples/lion.png')
+          .swiper-slide
+            img.swiper-slide-thumb(src='/img/deepar/samples/teddy_cigar.png')
+      .swiper-pagination
