feat : add firebase key

--- a/src/pug/layout/_default-layout.pug
+++ b/src/pug/layout/_default-layout.pug
@@ -63,6 +63,10 @@ html(lang="ja")
     block stylesheet-block
 
   body
+    script(src='/__/firebase/8.1.1/firebase-app.js')
+    script(src='/__/firebase/8.1.1/firebase-analytics.js')
+    script(src='/__/firebase/init.js')
+    
     block content-block
     
     // javascript
