feat : update neckrece effect

--- a/src/pug/page/deepar/moripearl/index.pug
+++ b/src/pug/page/deepar/moripearl/index.pug
@@ -27,5 +27,7 @@ block content-block
           .swiper-slide
             img.swiper-slide-thumb(src='/img/deepar/moripearl/earring.png')
           .swiper-slide
-            img.swiper-slide-thumb(src='/img/deepar/moripearl/neckrace.png')
+            img.swiper-slide-thumb(src='/img/deepar/moripearl/neckrace01.png')
+          .swiper-slide
+            img.swiper-slide-thumb(src='/img/deepar/moripearl/neckrace02.png')
       .swiper-pagination
