feat : edit carousel size

--- a/src/pug/page/deepar/moripearl/index.pug
+++ b/src/pug/page/deepar/moripearl/index.pug
@@ -4,7 +4,7 @@ prepend config-block
   - page_name = 'DeepAR'
 
 prepend stylesheet-block
-  link(rel="stylesheet" href='/deepar/style.css')
+  link(rel="stylesheet" href='/deepar/moripearl/style.css')
   link(rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css")
 
 prepend javascript-block
